testsuite/tests/patsyn/should_fail/T14552.stderr

T14552.hs:22:9: error:
    • Cannot generalise type because a skolem would escape.
      When generalising this type:
        forall k (w :: k --> *). Exp a0 (F @k @* w aa0)
      these skolems would escape:
        k
      if we quantified this variable:
        (aa0 :: k)
      (Indeed, I sometimes struggle even printing this correctly,
       due to its ill-scoped nature.)
    • In the declaration for pattern synonym ‘FOO’
